--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -38,8 +38,7 @@
 \toprule
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
-Date1 & Name(s) & Description of changes\\
-Date2 & Name(s) & Description of changes\\
+October 15th, 2022 & Bill Nguyen & FMEA \\
 ... & ... & ...\\
 \bottomrule
 \end{tabularx}
@@ -75,7 +74,7 @@ The next pages will show the full failure mode and effect analysis (FMEA) for RE
 \begin{landscape}
 \begin{figure}[ht]
 	\centering
-	\includegraphics[angle=360]{FMEAPart1.png}
+	\includegraphics[angle=360, scale=1.42]{FMEAPart1.png}
 	\caption{Part 1 of FMEA}
 \end{figure}
 \end{landscape}
