adding to revision history

--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -53,7 +53,8 @@ urlcolor=cyan          % color of external links
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
-Date 1 & 1.0 & Notes\\
+January 14th, 2023 & Bill Nguyen & Added MIS for Main Menu and Calendar\\
+January 14th, 2023 & Bill Nguyen & Added Introduction, Notation and Symbols/Abbreviations\\
 Date 2 & 1.1 & Notes\\
 \bottomrule
 \end{tabularx}
