--- a/docs/Design/SystDesign/SystDes.tex
+++ b/docs/Design/SystDesign/SystDes.tex
@@ -233,14 +233,15 @@ graduate attribute of Problem Analysis and Design.  Please answer the following 
   \item What are the limitations of your solution?  Put another way, given
   unlimited resources, what could you do to make the project better? (LO\_ProbSolutions)
 	
-\textbf{Syed}: Our main features are reliant on the database provided by external APIs. The recipe list and the exercise list can only give the user's the information that is accessable through the API. This limits the design of the app due to the limited query information. 
-
+\textbf{Syed}: Our main features are reliant on the database provided by external APIs. The recipe list and the exercise list can only give the user's the information that is accessable through the API. This limits the design of the app due to the limited query information. \\
+\textbf{Bill}: Project does not have functionalities such as analytics of data and predictive models that can potentially benefit the user experience. \\
   \item Give a brief overview of other design solutions you considered.  What
   are the benefits and tradeoffs of those other designs compared with the chosen
   design?  From all the potential options, why did you select documented design?
   (LO\_Explores)
 
-\textbf{Syed}: We considered a self serving exercise list, where the user would be able to add their own custom exercises. This seemed like a great option for user customizability, however the tradeoff is that the user must spend a tedious amount of time inputting the information. Instead, we have a preset list of the most common exercises that the user can quickly select and add their sets, repititions and weight.
+\textbf{Syed}: We considered a self serving exercise list, where the user would be able to add their own custom exercises. This seemed like a great option for user customizability, however the tradeoff is that the user must spend a tedious amount of time inputting the information. Instead, we have a preset list of the most common exercises that the user can quickly select and add their sets, repititions and weight. \\
+\textbf{Bill}: We considered using analytics to find statisctics and trends of which features are used the most/the least etc. which could help us improve user experience. Also considered using predictive models such as giving recipe/exercise suggestions to user based on user data. These were great options, but are options that are nice to have and were considered stretch goals. \\
 \end{enumerate}
 
 \end{document}
